discussion/kv_engine/179400/179400_rev18_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-53052: Update frequencies for all Buckets when unified caching

Change-Id: Ib4554e41206f2c9c6b5f45362c32a54277b54564

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Vesko Karaganev
Date: 2022-10-21 14:40:27.000000000
Message: 
Uploaded patch set 18.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-10-21 15:17:47.000000000
Message: 
Patch Set 18: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21389/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/bucket_item_freq_decayer_task.cc:57:9: error: use of undeclared identifier "Expects" [clang-diagnostic-error]
        Expects(pendingIt != pending.end());
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/bucket_item_freq_decayer_task.cc:58:9: error: use of undeclared identifier "Expects" [clang-diagnostic-error]
        Expects((*pendingIt)->isUnifiedCaching());
        ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21389/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/bucket_item_freq_decayer_task.cc:57:9:
error: use of undeclared identifier "Expects" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21389/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42459/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/daemon/bucket_item_freq_decayer_task.cc:57:9:
error: use of undeclared identifier "Expects"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42459/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11116/ : FAILURE

Compile error at [2022-10-21T14:46:40.780Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/daemon/bucket_item_freq_decayer_task.cc:57:9:
error: use of undeclared identifier "Expects"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11116/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/20647/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/50608/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11212/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23416/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23819/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24654/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31837/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22835/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
